salesforce_sfdx/main/default/objects/Account/fields/Contrato_vigente__c.field-meta.xml
<CustomField>
    <fullName>Contrato_vigente__c</fullName>
    <label>Contrato Vigente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eléctrico</fullName>
            </value>
            <value>
                <fullName>Telecomunicaciones</fullName>
            </value>
            <value>
                <fullName>Montaje</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>