salesforce_sfdx/main/default/objects/Account/fields/correoprocuenta__c.field-meta.xml
<CustomField>
    <fullName>correoprocuenta__c</fullName>
    <label>correoprocuenta</label>
    <type>Email</type>
</CustomField>