salesforce_sfdx/main/default/objects/Account/fields/Latitud__c.field-meta.xml
<CustomField>
    <fullName>Latitud__c</fullName>
    <formula>BillingLatitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latitud</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>