salesforce_sfdx/main/default/objects/Account/fields/Longitud__c.field-meta.xml
<CustomField>
    <fullName>Longitud__c</fullName>
    <formula>BillingLongitude</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitud</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>