salesforce_sfdx/main/default/objects/Account/fields/OFSMX_SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>OFSMX_SalesforceId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Salesforce</label>
    <type>Text</type>
</CustomField>