salesforce_sfdx/main/default/objects/Account/fields/OSFCL_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Account_Manager__c</fullName>
    <formula>IF(ISPICKVAL(OSFCL_Clasificacion_cuenta__c, &quot;One ENGIE&quot;)  ,
Owner.FirstName+&quot; &quot;+ Owner.LastName ,
&quot;&quot;)</formula>
    <label>Account Manager</label>
    <type>Text</type>
</CustomField>