salesforce_sfdx/main/default/objects/Account/fields/OSFCL_Clasificacion_cuenta__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Clasificacion_cuenta__c</fullName>
    <label>Clasificación cuenta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One ENGIE</fullName>
            </value>
            <value>
                <fullName>Coordinación Comercial</fullName>
            </value>
            <value>
                <fullName>División Comercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>