salesforce_sfdx/main/default/objects/Account/fields/OSFCL_CountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_CountryISOCode__c</fullName>
    <label>CountryISOCode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MX</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>