salesforce_sfdx/main/default/objects/Account/fields/OSFCL_Division_cliente_EECL__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Division_cliente_EECL__c</fullName>
    <label>División cliente EECL</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Giant</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>