salesforce_sfdx/main/default/objects/Account/fields/OSFCL_Identificador_unico__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Identificador_unico__c</fullName>
    <displayFormat>ACL-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Identificador único</label>
    <type>AutoNumber</type>
</CustomField>