salesforce_sfdx/main/default/objects/Account/fields/OSFCL_Municipio__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Municipio__c</fullName>
    <label>Municipio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Iquique</fullName>
            </value>
            <value>
                <fullName>Alto Hospicio</fullName>
            </value>
            <value>
                <fullName>Pozo Almonte</fullName>
            </value>
            <value>
                <fullName>Camiña</fullName>
            </value>
            <value>
                <fullName>Colchane</fullName>
            </value>
            <value>
                <fullName>Huara</fullName>
            </value>
            <value>
                <fullName>Pica</fullName>
            </value>
            <value>
                <fullName>Antofagasta</fullName>
            </value>
            <value>
                <fullName>Mejillones</fullName>
            </value>
            <value>
                <fullName>Sierra Gorda</fullName>
            </value>
            <value>
                <fullName>Taltal</fullName>
            </value>
            <value>
                <fullName>Calama</fullName>
            </value>
            <value>
                <fullName>Ollagüe</fullName>
            </value>
            <value>
                <fullName>San Pedro de Atacama</fullName>
            </value>
            <value>
                <fullName>Tocopilla</fullName>
            </value>
            <value>
                <fullName>María Elena</fullName>
            </value>
            <value>
                <fullName>Copiapó</fullName>
            </value>
            <value>
                <fullName>Caldera</fullName>
            </value>
            <value>
                <fullName>Tierra Amarilla</fullName>
            </value>
            <value>
                <fullName>Chañaral</fullName>
            </value>
            <value>
                <fullName>Diego de Almagro</fullName>
            </value>
            <value>
                <fullName>Vallenar</fullName>
            </value>
            <value>
                <fullName>Alto del Carmen</fullName>
            </value>
            <value>
                <fullName>Freirina</fullName>
            </value>
            <value>
                <fullName>Huasco</fullName>
            </value>
            <value>
                <fullName>La Serena</fullName>
            </value>
            <value>
                <fullName>Coquimbo</fullName>
            </value>
            <value>
                <fullName>Andacollo</fullName>
            </value>
            <value>
                <fullName>La Higuera</fullName>
            </value>
            <value>
                <fullName>Paiguano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>