salesforce_sfdx/main/default/objects/Account/fields/OSFCL_Proveedor_PPA__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Proveedor_PPA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Competidor que tiene contrato de PPA con el cliente</inlineHelpText>
    <label>Proveedor PPA</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>