salesforce_sfdx/main/default/objects/Account/fields/OSFCL_Rut__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Rut__c</fullName>
    <inlineHelpText>El formato debe ser:
Máximo 10 dígitos, sin puntos y con guión y dígito verificador: 76749930-2.
En caso de Rut menor a 10 millones, comenzar con &quot;0&quot;</inlineHelpText>
    <label>RUT</label>
    <length>10</length>
    <type>Text</type>
</CustomField>