salesforce_sfdx/main/default/objects/Account/fields/OSFCL_Zona_geografica__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Zona_geografica__c</fullName>
    <description>Introduzca la zona geográfica a la cual pertenece la cuenta</description>
    <inlineHelpText>debe ingresar la zona en la cual está ubicada la cuenta</inlineHelpText>
    <label>Zona geográfica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUR</fullName>
            </value>
            <value>
                <fullName>CENTRO</fullName>
            </value>
            <value>
                <fullName>NORTE CHICO</fullName>
            </value>
            <value>
                <fullName>NORTE GRANDE</fullName>
            </value>
            <value>
                <fullName>INTERNACIONAL</fullName>
                <isActive>false</isActive>
                <label>INTERNACIONAL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>