salesforce_sfdx/main/default/objects/Account/fields/OSFCO_Fecha_fin_de_contrato__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_Fecha_fin_de_contrato__c</fullName>
    <label>Fecha fin de contrato</label>
    <type>Date</type>
</CustomField>