salesforce_sfdx/main/default/objects/Account/fields/OSFCO_NIT__c.field-meta.xml
<CustomField>
    <fullName>OSFCO_NIT__c</fullName>
    <label>NIT</label>
    <length>14</length>
    <type>Text</type>
</CustomField>