salesforce_sfdx/main/default/objects/Account/fields/OSFMX_AccountContractID__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AccountContractID__c</fullName>
    <label>Id Cuenta SAP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>