salesforce_sfdx/main/default/objects/Account/fields/OSFMX_AnnualConsumptionElectricity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AnnualConsumptionElectricity__c</fullName>
    <label>Consumo anual electricidad(MWh)</label>
    <summarizedField>OSFMX_ElectricityConsumption__c.OSFMX_AnnualConsumptionElectricity__c</summarizedField>
    <summaryForeignKey>OSFMX_ElectricityConsumption__c.OSFMX_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>