salesforce_sfdx/main/default/objects/Account/fields/OSFMX_AnnualConsumptionFuel__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_AnnualConsumptionFuel__c</fullName>
    <label>Consumo anual de gas natural (Gj/año)</label>
    <summarizedField>OSFMX_GasConsumption__c.OSFMX_AnnualGasConsumptionGjbyyear__c</summarizedField>
    <summaryForeignKey>OSFMX_GasConsumption__c.OSFMX_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>