salesforce_sfdx/main/default/objects/Account/fields/OSFMX_BasicInformationInstallationPlant__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BasicInformationInstallationPlant__c</fullName>
    <label>Información básica instalación de planta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>