salesforce_sfdx/main/default/objects/Account/fields/OSFMX_BPNumber__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BPNumber__c</fullName>
    <label>Número de BP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>