salesforce_sfdx/main/default/objects/Account/fields/OSFMX_BPNumberOfBussiness__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BPNumberOfBussiness__c</fullName>
    <formula>IF
 (RecordType.DeveloperName="Service", Parent.OSFMX_Interlocutor__c,"")</formula>
    <label>Número de BP (cuenta de Negocio)</label>
    <type>Text</type>
</CustomField>