salesforce_sfdx/main/default/objects/Account/fields/OSFMX_BusinessLine__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BusinessLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Giro</label>
    <referenceTo>OSFMX_BusinessLine__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>