salesforce_sfdx/main/default/objects/Account/fields/OSFMX_BusinessName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BusinessName__c</fullName>
    <externalId>true</externalId>
    <label>Razón Social</label>
    <length>255</length>
    <type>Text</type>
</CustomField>