salesforce_sfdx/main/default/objects/Account/fields/OSFMX_CommercialContactEngie__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CommercialContactEngie__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona de contacto comercial ENGIE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>