salesforce_sfdx/main/default/objects/Account/fields/OSFMX_ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ContractNumber__c</fullName>
    <label>Número de contrato</label>
    <length>20</length>
    <type>Text</type>
</CustomField>