salesforce_sfdx/main/default/objects/Account/fields/OSFMX_CRLastModified__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_CRLastModified__c</fullName>
    <formula>IF( OSFMX_MINCR2__c ==  OSFMX_ECRValue__c ,

 OSFMX_ECRLastModified__c ,

  IF( OSFMX_MINCR2__c ==  OSFMX_FitchValue__c , 

 OSFMX_FitchLastModified__c , 

 IF( OSFMX_MINCR2__c ==  OSFMX_Moody_sValue__c , 

 OSFMX_Moody_sLastModified__c , 

 OSFMX_S_PLastModified__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de ultima Actualización CR</label>
    <type>Date</type>
</CustomField>