salesforce_sfdx/main/default/objects/Account/fields/OSFMX_ECR__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ECR__c</fullName>
    <description>Credit Rating ECR</description>
    <label>ECR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
                <default>true</default>
                <label>N/A</label>
            </value>
            <value>
                <fullName>AAA</fullName>
            </value>
            <value>
                <fullName>AA+</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AA-</fullName>
            </value>
            <value>
                <fullName>A+</fullName>
            </value>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>A-</fullName>
            </value>
            <value>
                <fullName>BBB+</fullName>
            </value>
            <value>
                <fullName>BBB</fullName>
            </value>
            <value>
                <fullName>BBB-</fullName>
            </value>
            <value>
                <fullName>BB+</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BB-</fullName>
            </value>
            <value>
                <fullName>B+</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>B-</fullName>
            </value>
            <value>
                <fullName>CCC+</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>CCC-</fullName>
            </value>
            <value>
                <fullName>CC</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>DDD</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>