salesforce_sfdx/main/default/objects/Account/fields/OSFMX_ECRLastModified__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ECRLastModified__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>ECR Last Modified</description>
    <label>Fecha de última actualización ECR</label>
    <type>Date</type>
</CustomField>