salesforce_sfdx/main/default/objects/Account/fields/OSFMX_ECRValue__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_ECRValue__c</fullName>
    <description>ECR Value</description>
    <label>Valor de ECR</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>