salesforce_sfdx/main/default/objects/Account/fields/OSFMX_EngieCustomer__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EngieCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente Engie</label>
    <type>Checkbox</type>
</CustomField>