salesforce_sfdx/main/default/objects/Account/fields/OSFMX_FinancialStatements__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FinancialStatements__c</fullName>
    <description>Financial statements</description>
    <label>Estados Financieros</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
                <default>true</default>
                <label>NO</label>
            </value>
            <value>
                <fullName>SI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>