salesforce_sfdx/main/default/objects/Account/fields/OSFMX_FitchLastModified__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FitchLastModified__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Fitch Last Modified</description>
    <label>Fecha de última actualización Fitch</label>
    <type>Date</type>
</CustomField>