salesforce_sfdx/main/default/objects/Account/fields/OSFMX_FitchValue__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FitchValue__c</fullName>
    <description>Fitch Value</description>
    <label>Valor Fitch</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>