salesforce_sfdx/main/default/objects/Account/fields/OSFMX_FSLastModified__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FSLastModified__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Financial statements Last Date Modified</description>
    <label>Fecha de Estados Financieros</label>
    <type>Date</type>
</CustomField>