salesforce_sfdx/main/default/objects/Account/fields/OSFMX_GlobalEngieAccount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_GlobalEngieAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuenta Global Engie</label>
    <type>Checkbox</type>
</CustomField>