salesforce_sfdx/main/default/objects/Account/fields/OSFMX_IdSuminister__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_IdSuminister__c</fullName>
    <label>Id Instalación de Suministro</label>
    <length>15</length>
    <type>Text</type>
</CustomField>