salesforce_sfdx/main/default/objects/Account/fields/OSFMX_InstallationNumber__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_InstallationNumber__c</fullName>
    <label>Número de instalación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>