salesforce_sfdx/main/default/objects/Account/fields/OSFMX_Interlocutor__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Interlocutor__c</fullName>
    <externalId>true</externalId>
    <label>No. de BP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>