salesforce_sfdx/main/default/objects/Account/fields/OSFMX_KeyAccount__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_KeyAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cuenta clave</label>
    <type>Checkbox</type>
</CustomField>