salesforce_sfdx/main/default/objects/Account/fields/OSFMX_Latitude__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Latitude__c</fullName>
    <label>Latitud DMS</label>
    <length>30</length>
    <type>Text</type>
</CustomField>