salesforce_sfdx/main/default/objects/Account/fields/OSFMX_lengthAccountName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_lengthAccountName__c</fullName>
    <formula>LEN( Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Longitud Nombre</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>