salesforce_sfdx/main/default/objects/Account/fields/OSFMX_MINCR2__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_MINCR2__c</fullName>
    <formula>MIN( OSFMX_ECRValue__c , OSFMX_FitchValue__c , OSFMX_Moody_sValue__c , OSFMX_S_PValue__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MINCR2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>