salesforce_sfdx/main/default/objects/Account/fields/OSFMX_Moody_sLastModified__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Moody_sLastModified__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Moody´s Last Modified</description>
    <label>Fecha de última actualización Moody´s</label>
    <type>Date</type>
</CustomField>