salesforce_sfdx/main/default/objects/Account/fields/OSFMX_Moody_sValue__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Moody_sValue__c</fullName>
    <label>Valor Moody´s</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>