salesforce_sfdx/main/default/objects/Account/fields/OSFMX_NewCR__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NewCR__c</fullName>
    <formula>IF( OSFMX_MINCR2__c == OSFMX_ECRValue__c ,

CASE(OSFMX_MINCR2__c ,
1, &quot;D&quot;,
2, &quot;DD&quot;,
3, &quot;DDD&quot;,
4, &quot;C&quot;,
5, &quot;CC&quot;,
6, &quot;CCC-&quot;,
7, &quot;CCC&quot;,
8, &quot;CCC+&quot;,
9, &quot;B-&quot;,
10, &quot;B&quot;,
11, &quot;B+&quot;,
12, &quot;BB-&quot;,
13, &quot;BB&quot;,
14, &quot;BB+&quot;,
15, &quot;BBB-&quot;,
16, &quot;BBB&quot;,
17, &quot;BBB+&quot;,
18, &quot;A-&quot;,
19, &quot;A&quot;,
20, &quot;A+&quot;,
21, &quot;AA-&quot;,
22, &quot;AA&quot;,
23, &quot;AA+&quot;,
24, &quot;AAA&quot;,
&quot;S/N&quot;) ,

IF(OSFMX_MINCR2__c == OSFMX_FitchValue__c ,

CASE(OSFMX_MINCR2__c ,
1, &quot;D&quot;,
2, &quot;DD&quot;,
3, &quot;DDD&quot;,
4, &quot;C&quot;,
5, &quot;CC&quot;,
6, &quot;CCC-&quot;,
7, &quot;CCC&quot;,
8, &quot;CCC+&quot;,
9, &quot;B-&quot;,
10, &quot;B&quot;,
11, &quot;B+&quot;,
12, &quot;BB-&quot;,
13, &quot;BB&quot;,
14, &quot;BB+&quot;,
15, &quot;BBB-&quot;,
16, &quot;BBB&quot;,
17, &quot;BBB+&quot;,
18, &quot;A-&quot;,
19, &quot;A&quot;,
20, &quot;A+&quot;,
21, &quot;AA-&quot;,
22, &quot;AA&quot;,
23, &quot;AA+&quot;,
24, &quot;AAA&quot;,
&quot;S/N&quot;) ,

IF(OSFMX_MINCR2__c == OSFMX_S_PValue__c ,

CASE(OSFMX_MINCR2__c ,
2, &quot;D&quot;,
3, &quot;SD&quot;,
4, &quot;C&quot;,
5, &quot;CC&quot;,
6, &quot;CCC-&quot;,
7, &quot;CCC&quot;,
8, &quot;CCC+&quot;,
9, &quot;B-&quot;,
10, &quot;B&quot;,
11, &quot;B+&quot;,
12, &quot;BB-&quot;,
13, &quot;BB&quot;,
14, &quot;BB+&quot;,
15, &quot;BBB-&quot;,
16, &quot;BBB&quot;,
17, &quot;BBB+&quot;,
18, &quot;A-&quot;,
19, &quot;A&quot;,
20, &quot;A+&quot;,
21, &quot;AA-&quot;,
22, &quot;AA&quot;,
23, &quot;AA+&quot;,
24, &quot;AAA&quot;,
&quot;S/N&quot;) ,

 IF( OSFMX_MINCR2__c ==  OSFMX_Moody_sValue__c ,  

CASE(OSFMX_MINCR2__c ,
3, &quot;C&quot;,
5, &quot;Ca&quot;,
6, &quot;Caa3&quot;,
7, &quot;Caa2&quot;,
8, &quot;Caa1&quot;,
9, &quot;B3&quot;,
10, &quot;B2&quot;,
11, &quot;B1&quot;,
12, &quot;Ba3&quot;,
13, &quot;Ba2&quot;,
14, &quot;Ba1&quot;,
15, &quot;Baa3&quot;,
16, &quot;Baa2&quot;,
17, &quot;Baa1&quot;,
18, &quot;A3&quot;,
19, &quot;A2&quot;,
20, &quot;A1&quot;,
21, &quot;Aa3&quot;,
22, &quot;Aa2&quot;,
23, &quot;Aa1&quot;,
24, &quot;Aaa&quot;,
&quot;S/N&quot;),
&quot;S/N&quot;)) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calificación Crediticia</label>
    <type>Text</type>
</CustomField>