salesforce_sfdx/main/default/objects/Account/fields/OSFMX_OwnerFullName__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_OwnerFullName__c</fullName>
    <formula>Owner.FirstName &amp;&quot; &quot;&amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre completo del propietario</label>
    <type>Text</type>
</CustomField>