salesforce_sfdx/main/default/objects/Account/fields/OSFMX_Qmaxm3byh__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_Qmaxm3byh__c</fullName>
    <label>Qmax(m3/h)</label>
    <summarizedField>OSFMX_GasConsumption__c.OSFMX_Qmaxm3byh__c</summarizedField>
    <summaryForeignKey>OSFMX_GasConsumption__c.OSFMX_Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>