salesforce_sfdx/main/default/objects/Account/fields/OSFMX_RFC__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_RFC__c</fullName>
    <inlineHelpText>AAA = Siglas del contribuyente;
aammdd = Fecha Creación Entidad (año,
mes, día);
HH = Homonimia, alfanumérico;
D = Dígito verificador, alfanumérico.</inlineHelpText>
    <label>RFC</label>
    <length>13</length>
    <type>Text</type>
</CustomField>